added preset autonomous courses

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -4,8 +4,8 @@
   "holonomicMode": true,
   "pathFolders": [
     "CD coral station",
+    "Autonomous Preset Paths",
     "LK coral station",
-    "Default autonomous",
     "barge zones to reef"
   ],
   "autoFolders": [],
