--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -6,6 +6,7 @@
     "Autonomous Preset Paths",
     "CD coral station",
     "LK coral station",
+    "NET paths",
     "barge zones to reef"
   ],
   "autoFolders": [],
