--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -7,6 +7,7 @@
     "CD coral station",
     "LK coral station",
     "NET paths",
+    "Processor paths",
     "barge zones to reef"
   ],
   "autoFolders": [],
