Final modular autonomous code checks

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -6,7 +6,7 @@
     "Autonomous Preset Paths",
     "CD coral station",
     "LK coral station",
-    "NET paths",
+    "Net paths",
     "Processor paths",
     "barge zones to reef"
   ],
