Changes to paths

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -5,7 +5,7 @@
   "pathFolders": [
     "Autonomous Preset Paths",
     "CD coral station",
-    "LK coral station",
+    "KL coral station",
     "Processor paths",
     "barge zones to reef"
   ],
